fix password el overflowing main-wrapper when given larger character numbers

--- a/style.css
+++ b/style.css
@@ -128,6 +128,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .password-el:hover {
